--- a/scss/main.css
+++ b/scss/main.css
@@ -1,1 +1,38 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap");/*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap");
+header {
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem;
+}
+header nav {
+  width: 100%;
+  max-width: 20rem;
+  display: flex;
+  justify-content: space-between;
+}
+header nav a {
+  font-size: 1.3rem;
+  color: hsl(238deg, 22%, 44%);
+  cursor: pointer;
+  transition: 0.4s;
+}
+header nav a:hover {
+  color: black;
+  transform: translateY(-0.17rem);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+}/*# sourceMappingURL=main.css.map */
