--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,3 +12,16 @@ $Light-Gray: hsl(0, 0%, 75%);
 @import 'sectionhero2';
 @import 'access';
 @import 'footer';
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+}
+
+body{
+    width: 100%;
+    min-height: 100vh;
+}
