--- a/scss/_sectionhero1.scss
+++ b/scss/_sectionhero1.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 35rem;
     display: flex;
+    margin-bottom: 4rem;
         article{
             width: 50%;
             padding: 6rem 3rem;
@@ -25,12 +26,13 @@
                     font-size: 1rem;
                     padding: 0rem 3rem;
                     border: 0.13rem black solid;
+                    font-weight: 700;
                     border-radius: 0.3rem;
                     background: url(../images/mail.svg) no-repeat;
                     background-size: 2rem;
                     background-position-x: 0.5rem;
                     background-position-y: 0.5rem;
-                    transition: width 0.4s ease-in-out;
+                    transition: width 0.5s ease-in-out;
                     margin-right: 1rem;
                         &::placeholder{
                             color: $Light-Gray;
