--- a/scss/_sectionhero2.scss
+++ b/scss/_sectionhero2.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 7rem;
     background: url(../images/bg-curve-desktop.svg) no-repeat;
+    background-size: cover;
 }
 #secund_section{
     height: 41rem;
